--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -23,5 +23,6 @@ jobs:
       
       - name: Render Rmarkdown files and Commit Results
         run: |
-           R -e 'rmarkdown::render("example-notebook.qmd")'
+           R install.packages("rmarkdown")
+           R -e 'rmarkdown::render("topmodel_fromscratch_2_23_23.Rmd")'
 
